font, spacing and calculation fixes

--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -7,6 +7,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
+  font-family: var(--generalSans);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,11 +18,11 @@
 .modal_container {
   background: #fff;
   position: relative;
+  top: 3.5rem;
   width: 100%;
+  height: 51rem;
   max-height: 95vh;
   transition: 0.3s all ease-in-out;
-  // overflow: hidden;
-  // padding-bottom: 1.5rem;
 
   @include media('>=tablet') {
     top: 2rem;
@@ -33,7 +34,7 @@
   width: 100%;
   height: 70px;
   position: absolute;
-  top: -70px;
+  top: -60px;
   left: 0;
   right: 0;
   display: flex;
@@ -48,9 +49,9 @@
 }
 
 .top_pop {
-  height: 70px;
-  padding: 0 34px;
-  border-radius: 32px 32px 0px 0px;
+  height: 60px;
+  padding: 0 1.5rem;
+  border-radius: 2rem 2rem 0px 0px;
   background-color: #ffffff;
   display: inline-flex;
   align-items: center;
