--- a/src/components/purchase-ticket/components/order-information/order.module.scss
+++ b/src/components/purchase-ticket/components/order-information/order.module.scss
@@ -25,7 +25,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  gap: 0.75rem;
+  gap: 1.5rem;
   padding: 1rem 0;
 
   &_checkbox {
