--- a/src/components/purchase-ticket/components/ticket-type/type.module.scss
+++ b/src/components/purchase-ticket/components/ticket-type/type.module.scss
@@ -60,8 +60,9 @@
         font-weight: 400;
         font-size: 0.875rem;
         color: #1c1c1c;
-        line-height: 20px;
-        width: 80%;
+        line-height: 24px;
+        // border: 2px solid black;
+        width: 90%;
       }
     }
 
